# DeepSVDD_PyTorch_Lightning

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
datasets/: __init__.py  cifar10.py  preprocessing.py
lightning_modules/: autoencoder_module.py  deep_svdd_module.py
networks/: __init__.py  cifar10_LeNet.py  cifar10_LeNet_elu.py
utils/: config.py  visualization.py
