[tool.poetry]
name = "deepsvdd-pytorch-lightning"
version = "0.1.0"
description = ""
authors = ["Zhongyi <zhongyidu1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torchvision = "^0.21.0"
lightning = "^2.5.1"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
